--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "zenflow-build-js-lib",
   "version": "0.1.1",
   "description": "A standard build for js libs",
-  "bin": {
-    "zenflow-build-js-lib": "cli.js"
-  },
+  "bin": "cli.js",
   "files": [
     "cli.js",
     "lib"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "fix": "zenflow-lint-js --fix",
+    "lint": "zenflow-lint-js",
+    "test": "npm run lint"
   },
   "repository": {
     "type": "git",
@@ -48,5 +48,8 @@
     "rollup-plugin-node-resolve": "^3.2.0",
     "rollup-plugin-uglify": "^3.0.0",
     "slash": "^1.0.0"
+  },
+  "devDependencies": {
+    "zenflow-lint-js": "^1.0.0"
   }
 }
