--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zenflow-build-js-lib",
   "version": "0.1.1",
-  "description": "A standard build for js libs",
+  "description": "A zero-config opinionated and awesome build system for portable js libs",
   "bin": "cli.js",
   "main": "lib/main.js",
   "files": [
