--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "del": "^3.0.0",
+    "minimist": "^1.2.0",
     "rollup": "^0.57.0",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^9.1.0",
