--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "fix": "zenflow-lint-js --fix",
     "lint": "zenflow-lint-js",
+    "update-snapshot": "jest --verbose --updateSnapshot",
     "test-only": "jest --verbose --ci",
     "test": "npm run lint && npm run test-only",
     "dev": "npm run fix && jest --verbose --updateSnapshot --watch --notify"
@@ -49,7 +50,7 @@
     "babel-preset-react": "^6.24.1",
     "del": "^3.0.0",
     "minimist": "^1.2.0",
-    "rollup": "^0.57.0",
+    "rollup": "^0.57.1",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-node-resolve": "^3.2.0",
@@ -58,9 +59,13 @@
   },
   "devDependencies": {
     "@semantic-release/changelog": "^2.0.1",
-    "@semantic-release/git": "^4.0.1",
+    "@semantic-release/git": "^4.0.2",
+    "execa": "^0.10.0",
     "jest": "^22.4.2",
-    "semantic-release": "^15.0.3",
+    "p-memoize": "^1.0.0",
+    "recursive-copy": "^2.0.9",
+    "semantic-release": "^15.1.2",
+    "tempy": "^0.2.1",
     "zenflow-lint-js": "^1.0.0"
   }
 }
