--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   "devDependencies": {
     "@semantic-release/changelog": "^2.0.1",
     "@semantic-release/git": "^4.0.1",
-    "jest": "^23.0.0-alpha.0",
+    "jest": "^22.4.2",
     "semantic-release": "^15.0.3",
     "zenflow-lint-js": "^1.0.0"
   }
