--- a/package.json
+++ b/package.json
@@ -45,12 +45,9 @@
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
     "camelcase": "^4.1.0",
     "del": "^3.0.0",
+    "json5": "^1.0.1",
     "minimist": "^1.2.0",
     "rollup": "^0.57.1",
     "rollup-plugin-babel": "^3.0.3",
